created JS folder and script.js

--- a/src/main.html
+++ b/src/main.html
@@ -29,5 +29,8 @@
             </div>
             <div class = "row" id = "cards"></div>
         </div>
+
+        <!---jQuery Script-->
+        <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </body>
 </html>
