--- a/src/main.html
+++ b/src/main.html
@@ -23,6 +23,8 @@
     </head>
 
     <body>
+
+        <!--Container Class-->
         <div class = "container" id = "team">
             <div class = "row">
                 <div class = "col-12 text-center bg-info my-5 py-5 display-4 text-white">My Team</div>
